# GraphEngine

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  graph.txt  graphengine  main.cpp
graph_files/: graph.txt  spatial_graph.txt
src/: algorithms.cpp  algorithms.h  graph.cpp  graph.h  io.cpp  io.h
src/data_structures/: DSU.cpp  DSU.h  minheap.cpp  minheap.h  queue.cpp  queue.h  stack.cpp  stack.h
src/impl/: BST.cpp  algorithms.cpp  graph.cpp  io.cpp  spatialgraph.cpp
src/include/: BST.h  algorithms.h  graph.h  io.h  spatialgraph.h
